Added 1.15 support Removed 1.14 support

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,3 +4,5 @@ releasePage: 'https://github.com/TreeboMC/ShakeNBT/releases/latest'
 messages:
   badge: '&6[ShakeNBT]&r'
   error: '&4ERROR:&r'
+
+disableBlockExplosionsLowTPS: true
